// Vitest Snapshot v1

exports[`Button.vue > renders OXD button 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--medium oxd-button--main\\" data-v-86ca482c=\\"\\">
  <!--v-if--> Button
  <!--v-if-->
</button>"
`;

exports[`Button.vue > should renders OXD button with custom color 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--medium oxd-button--main\\" style=\\"background-color: palegreen;\\" data-v-86ca482c=\\"\\">
  <!--v-if--> Button
  <!--v-if-->
</button>"
`;

exports[`Button.vue > should renders OXD ghost button 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--medium oxd-button--ghost\\" data-v-86ca482c=\\"\\">
  <!--v-if--> Button
  <!--v-if-->
</button>"
`;

exports[`Button.vue > should renders OXD ghost-danger button 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--medium oxd-button--ghost-danger\\" data-v-86ca482c=\\"\\">
  <!--v-if--> Button
  <!--v-if-->
</button>"
`;

exports[`Button.vue > should renders OXD ghost-info button 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--medium oxd-button--ghost-info\\" data-v-86ca482c=\\"\\">
  <!--v-if--> Button
  <!--v-if-->
</button>"
`;

exports[`Button.vue > should renders OXD ghost-success button 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--medium oxd-button--ghost-success\\" data-v-86ca482c=\\"\\">
  <!--v-if--> Button
  <!--v-if-->
</button>"
`;

exports[`Button.vue > should renders OXD ghost-warn button 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--medium oxd-button--ghost-warn\\" data-v-86ca482c=\\"\\">
  <!--v-if--> Button
  <!--v-if-->
</button>"
`;

exports[`Button.vue > should renders OXD iconName button 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--medium oxd-button--main\\" data-v-86ca482c=\\"\\"><i class=\\"oxd-icon bi-arrow-left oxd-button-icon\\" data-v-85cde8ca=\\"\\" data-v-86ca482c=\\"\\"></i> Button
  <!--v-if-->
</button>"
`;

exports[`Button.vue > should renders OXD iconRightName button 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--medium oxd-button--main\\" data-v-86ca482c=\\"\\">
  <!--v-if--> Button <i class=\\"oxd-icon bi-arrow-right oxd-button-icon\\" data-v-85cde8ca=\\"\\" data-v-86ca482c=\\"\\"></i>
</button>"
`;

exports[`Button.vue > should renders OXD label button 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--medium oxd-button--label\\" data-v-86ca482c=\\"\\">
  <!--v-if--> Button
  <!--v-if-->
</button>"
`;

exports[`Button.vue > should renders OXD label-danger button 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--medium oxd-button--label-danger\\" data-v-86ca482c=\\"\\">
  <!--v-if--> Button
  <!--v-if-->
</button>"
`;

exports[`Button.vue > should renders OXD label-info button 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--medium oxd-button--label-info\\" data-v-86ca482c=\\"\\">
  <!--v-if--> Button
  <!--v-if-->
</button>"
`;

exports[`Button.vue > should renders OXD label-success button 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--medium oxd-button--label-success\\" data-v-86ca482c=\\"\\">
  <!--v-if--> Button
  <!--v-if-->
</button>"
`;

exports[`Button.vue > should renders OXD label-warn button 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--medium oxd-button--label-warn\\" data-v-86ca482c=\\"\\">
  <!--v-if--> Button
  <!--v-if-->
</button>"
`;

exports[`Button.vue > should renders OXD large button 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--large oxd-button--main\\" data-v-86ca482c=\\"\\">
  <!--v-if--> Button
  <!--v-if-->
</button>"
`;

exports[`Button.vue > should renders OXD main button 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--medium oxd-button--main\\" data-v-86ca482c=\\"\\">
  <!--v-if--> Button
  <!--v-if-->
</button>"
`;

exports[`Button.vue > should renders OXD medium button 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--medium oxd-button--main\\" data-v-86ca482c=\\"\\">
  <!--v-if--> Button
  <!--v-if-->
</button>"
`;

exports[`Button.vue > should renders OXD secondary button 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--medium oxd-button--secondary\\" data-v-86ca482c=\\"\\">
  <!--v-if--> Button
  <!--v-if-->
</button>"
`;

exports[`Button.vue > should renders OXD small button 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--small oxd-button--main\\" data-v-86ca482c=\\"\\">
  <!--v-if--> Button
  <!--v-if-->
</button>"
`;

exports[`Button.vue > should renders OXD solid danger button 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--medium oxd-button--danger\\" data-v-86ca482c=\\"\\">
  <!--v-if--> Button
  <!--v-if-->
</button>"
`;

exports[`Button.vue > should renders OXD solid info button 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--medium oxd-button--info\\" data-v-86ca482c=\\"\\">
  <!--v-if--> Button
  <!--v-if-->
</button>"
`;

exports[`Button.vue > should renders OXD solid success button 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--medium oxd-button--success\\" data-v-86ca482c=\\"\\">
  <!--v-if--> Button
  <!--v-if-->
</button>"
`;

exports[`Button.vue > should renders OXD solid warn button 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--medium oxd-button--warn\\" data-v-86ca482c=\\"\\">
  <!--v-if--> Button
  <!--v-if-->
</button>"
`;

exports[`Button.vue > should renders OXD text button 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--medium oxd-button--text\\" data-v-86ca482c=\\"\\">
  <!--v-if--> Button
  <!--v-if-->
</button>"
`;

exports[`Button.vue > should renders OXD tool button 1`] = `
"<button type=\\"button\\" class=\\"oxd-button oxd-button--medium oxd-button--tool\\" data-v-86ca482c=\\"\\">
  <!--v-if--> Button
  <!--v-if-->
</button>"
`;
